Added simple python implementation of diff to replace using the ``fc`` tool on windows because it is buggy when tests are run concurrently.

--- a/Test/lit.site.cfg
+++ b/Test/lit.site.cfg
@@ -111,13 +111,16 @@ else:
     lit_config.warning('Skipping solver sanity check on Windows')
 
 # Add diff tool substitution
+commonDiffFlags=' --unified=3 --strip-trailing-cr --ignore-all-space'
 diffExecutable = None
 if os.name == 'posix':
-    diffExecutable = 'diff --unified=3 --strip-trailing-cr --ignore-all-space'
+    diffExecutable = 'diff' + commonDiffFlags
 elif os.name == 'nt':
-    diffExecutable = 'fc /W'
+    pydiff = os.path.join(config.test_source_root, 'pydiff.py')
+    diffExecutable = sys.executable + ' ' + pydiff + commonDiffFlags
 else:
     lit_config.fatal('Unsupported platform')
+lit_config.note("Using diff tool '{}'".format(diffExecutable))
 
 config.substitutions.append( ('%diff', diffExecutable ))
 
