Report the python version being used when executing lit.

--- a/Test/lit.site.cfg
+++ b/Test/lit.site.cfg
@@ -10,6 +10,8 @@ import platform
 import lit.util
 import lit.formats
 
+lit_config.note('using Python {}'.format(sys.version))
+
 # name: The name of this test suite.
 config.name = 'Boogie'
 
