Add alpha equivalence check for Expr, and use it when lambda lifting

--- a/Source/Core/Core.csproj
+++ b/Source/Core/Core.csproj
@@ -164,6 +164,7 @@
     <Compile Include="AbsyExpr.cs" />
     <Compile Include="AbsyQuant.cs" />
     <Compile Include="AbsyType.cs" />
+    <Compile Include="AlphaEquality.cs" />
     <Compile Include="InterProceduralReachabilityGraph.cs" />
     <Compile Include="CommandLineOptions.cs" />
     <Compile Include="DeadVarElim.cs" />
