Introduce unit tests which use NUnit. NUnit is now a dependency so developers need to install it via NuGet.
There aren't many tests yet. Just a few for Core and Basetypes but
hopefully more will be added in the future.

More information can be found in Source/UnitTests/README.md

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ Source/*/bin
 Source/*/obj
 Source/Provers/*/bin
 Source/Provers/*/obj
+Source/packages/*
+Source/UnitTests/TestResult.xml
 Binaries/ITaskManager.dll
 Binaries/ITaskManager.pdb
 Binaries/Microsoft.SpecSharp.Runtime.dll
