--- a/Source/Houdini/Houdini.csproj
+++ b/Source/Houdini/Houdini.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -97,7 +97,7 @@
     </Compile>
     <Compile Include="AbstractHoudini.cs" />
     <Compile Include="Checker.cs" />
-    <Compile Include="CandidateDependenceAnalyser.cs" />
+    <Compile Include="AnnotationDependenceAnalyser.cs" />
     <Compile Include="Houdini.cs" />
     <Compile Include="StagedHoudini.cs" />
     <Compile Include="ConcurrentHoudini.cs" />
