--- a/Source/UnitTests/CoreTests/CoreTests.csproj
+++ b/Source/UnitTests/CoreTests/CoreTests.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ExprEquality.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ExprTypeChecking.cs" />
+    <Compile Include="ExprImmutability.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
