--- a/.gitignore
+++ b/.gitignore
@@ -1,77 +1,31 @@
-Source/t
+# Nuget
+Source/packages/*
+
+# Tests
+Source/UnitTests/TestResult.xml
+Source/UnitTests/*/bin
+Source/UnitTests/*/obj
+Test/*/Output
+TestResult.xml
+
+# Binaries
+Source/*/bin
+Source/*/obj
+Source/Provers/*/bin
+Source/Provers/*/obj
+Binaries/*.dll
+Binaries/*.mdb
+Binaries/*.exe
+Binaries/*.pdb
+Binaries/*.config
+
+# Editor temporary files
+.*.swp
+
+# Visual Studio files
 Source/_ReSharper.Boogie
 Source/Provers/*/*.user
 Source/*/*.user
 Source/*.user
 Source/*.suo
 Source/*.cache
-Source/BoogieDriver/obj/
-Source/*/bin
-Source/*/obj
-Source/Provers/*/bin
-Source/Provers/*/obj
-Source/packages/*
-Source/UnitTests/TestResult.xml
-Binaries/ITaskManager.dll
-Binaries/ITaskManager.pdb
-Binaries/Microsoft.SpecSharp.Runtime.dll
-Binaries/Microsoft.SpecSharp.Runtime.pdb
-Binaries/Microsoft.SpecSharp.dll
-Binaries/Microsoft.SpecSharp.pdb
-Binaries/Microsoft.VisualStudio.IntegrationHelper.dll
-Binaries/Microsoft.VisualStudio.IntegrationHelper.pdb
-Binaries/Microsoft.VisualStudio.Package.dll
-Binaries/Microsoft.VisualStudio.Package.pdb
-Binaries/Mscorlib.Contracts.dll
-Binaries/System.Compiler.Contracts.dll
-Binaries/System.Compiler.Framework.Contracts.dll
-Binaries/System.Compiler.Framework.dll
-Binaries/System.Compiler.Framework.pdb
-Binaries/System.Compiler.Runtime.dll
-Binaries/System.Compiler.Runtime.pdb
-Binaries/System.Compiler.dll
-Binaries/System.Compiler.pdb
-Binaries/System.Contracts.dll
-Binaries/System.Xml.Contracts.dll
-Binaries/ssc.exe
-Binaries/ssc.pdb
-Binaries/AIFramework.dll
-Binaries/AIFramework.pdb
-Binaries/AbsInt.dll
-Binaries/AbsInt.pdb
-Binaries/Basetypes.dll
-Binaries/Basetypes.pdb
-Binaries/Boogie.exe*
-Binaries/Boogie.pdb
-Binaries/Core.dll
-Binaries/Core.pdb
-Binaries/Graph.dll
-Binaries/Graph.pdb
-Binaries/Model.dll
-Binaries/Model.pdb
-Binaries/Microsoft.Contracts.dll
-Binaries/Provers.Isabelle.dll
-Binaries/Provers.Isabelle.pdb
-Binaries/Provers.TPTP.dll
-Binaries/Provers.TPTP.pdb
-Binaries/Provers.SMTLib.dll
-Binaries/Provers.SMTLib.pdb
-Binaries/Provers.Simplify.dll
-Binaries/Provers.Simplify.pdb
-Binaries/Provers.Z3.dll
-Binaries/Provers.Z3.pdb
-Binaries/VCExpr.dll
-Binaries/VCExpr.pdb
-Binaries/VCGeneration.dll
-Binaries/VCGeneration.pdb
-Binaries/CodeContractsExtender.dll
-Binaries/CodeContractsExtender.pdb
-Binaries/*.vshost.exe*
-Binaries/BVD.exe*
-Binaries/BVD.pdb
-Binaries/ParserHelper.dll
-Binaries/ParserHelper.pdb
-Binaries/BytecodeTranslator*
-Test/*/Output
-Test/*/*.sx
-Test/VSComp2010/out.cs
