Don't force the exit code to 0 by default
Although it's convenient to force the exit code to zero for lit testing,
it is more conventional (and better for interfacing with other systems)
to return a non-zero error if verification fail: at the moment, the only
way (IIUC) to find out whether verification succeeded (on the command
line) was to parse the textual output of Boogie.

This patch adds a CountVerificationErrors option, and enables it by
default. The patch also sets this option to zero for tests, lest lit get
confused in test cases where verification actually fails.

--- a/Test/lit.site.cfg
+++ b/Test/lit.site.cfg
@@ -96,7 +96,8 @@ if os.name == 'posix':
 boogieExecutable += ' -nologo'
 
 # We do not want absolute or relative paths in error messages, just the basename of the file
-boogieExecutable += ' -useBaseNameForFileName'
+# We also want to force error codes to 0
+boogieExecutable += ' -useBaseNameForFileName -countVerificationErrors:0'
 
 # Allow user to provide extra arguments to Boogie
 boogieParams = lit_config.params.get('boogie_params','')
