Add travis file to gitattributes file.

--- a/.gitattributes
+++ b/.gitattributes
@@ -35,6 +35,7 @@ lit.site.cfg text eol=lf
 lit.local.cfg text eol=lf
 *.expect text eol=lf
 *.md text eol=lf
+.travis.yml text eol=lf
 
 # For the remaining files the line endings of checked out
 # files is defined by the ``core.eol`` git config variable.
