defined string constants for all attributes used in the CIVL extension
Unfortunately the new CivlAttributes class has to be in Core project,
since some CIVL specifics are implemented there.

--- a/Source/Core/Core.csproj
+++ b/Source/Core/Core.csproj
@@ -170,6 +170,7 @@
     <Compile Include="AbsyQuant.cs" />
     <Compile Include="AbsyType.cs" />
     <Compile Include="AlphaEquality.cs" />
+    <Compile Include="CivlAttributes.cs" />
     <Compile Include="InterProceduralReachabilityGraph.cs" />
     <Compile Include="CommandLineOptions.cs" />
     <Compile Include="DeadVarElim.cs" />
