--- a/Source/Concurrency/Concurrency.csproj
+++ b/Source/Concurrency/Concurrency.csproj
@@ -74,7 +74,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LinearSets.cs" />
+    <Compile Include="LinearTypeChecker.cs" />
     <Compile Include="MoverCheck.cs" />
     <Compile Include="CivlRefinement.cs" />
     <Compile Include="Program.cs" />
