--- a/Source/Concurrency/Concurrency.csproj
+++ b/Source/Concurrency/Concurrency.csproj
@@ -77,7 +77,7 @@
     <Compile Include="LinearTypeChecker.cs" />
     <Compile Include="MoverCheck.cs" />
     <Compile Include="CivlRefinement.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="CivlVCGeneration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimulationRelation.cs" />
     <Compile Include="CivlTypeChecker.cs" />
