--- a/.travis.yml
+++ b/.travis.yml
@@ -25,5 +25,5 @@ script:
   # Run unit tests
   - python Source/UnitTests/run-unittests.py ${BOOGIE_CONFIG}
   # Run driver tests
-  - ln -s $(find z3* -name z3 -type f) Binaries/z3.exe
+  - ln -s $(find . -name z3 -type f) Binaries/z3.exe
   - lit -v Test/
