Debugging travis build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,6 @@ install:
   # Download a Z3 release
   - wget ${Z3URL}
   - unzip z3*.zip
-  - pwd
-  - find z3* -name z3 -type f
   # NuGet is a little flakey in legacy TravisCI, use travis_retry command to retry the command if it fails
   - travis_retry nuget restore ${TRAVIS_SOLUTION}
   # Install needed python tools
@@ -28,8 +26,5 @@ script:
   # Run unit tests
   - python Source/UnitTests/run-unittests.py ${BOOGIE_CONFIG}
   # Run driver tests
-  - pwd
-  - find .
-  - ln -s $(find z3* -name z3 -type f) Binaries/z3.exe
-  - file Binaries/z3.exe
+  - ln -s $(realpath $(find z3* -name z3 -type f)) Binaries/z3.exe
   - lit -v Test/
