--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,5 @@ script:
   # Run unit tests
   - python Source/UnitTests/run-unittests.py ${BOOGIE_CONFIG}
   # Run driver tests
-  - ln -s $(realpath $(find z3* -name z3 -type f)) Binaries/z3.exe
-  - find .
-  - file Binaries/z3
+  - ln -s $(find $PWD/z3* -name z3 -type f) Binaries/z3.exe
   - lit -v Test/
