--- a/Source/Basetypes/Basetypes.csproj
+++ b/Source/Basetypes/Basetypes.csproj
@@ -167,6 +167,7 @@
       <Link>version.cs</Link>
     </Compile>
     <Compile Include="BigDec.cs" />
+    <Compile Include="RoundingMode.cs" />
     <Compile Include="BigNum.cs" />
     <Compile Include="BigFloat.cs" />
     <Compile Include="Rational.cs" />
