--- a/Test/lit.site.cfg
+++ b/Test/lit.site.cfg
@@ -127,7 +127,7 @@ else:
     lit_config.warning('Skipping solver sanity check on Windows')
 
 # Add diff tool substitution
-commonDiffFlags=' --unified=3 --strip-trailing-cr --ignore-all-space'
+commonDiffFlags=' --strip-trailing-cr --ignore-all-space'
 diffExecutable = None
 if os.name == 'posix':
     diffExecutable = 'diff' + commonDiffFlags
