Switch to pydiff in Travis CI (previous commit did not help)

--- a/Test/lit.site.cfg
+++ b/Test/lit.site.cfg
@@ -127,13 +127,13 @@ else:
     lit_config.warning('Skipping solver sanity check on Windows')
 
 # Add diff tool substitution
-commonDiffFlags=' --strip-trailing-cr --ignore-all-space'
+commonDiffFlags=' --unified=3 --strip-trailing-cr --ignore-all-space'
 diffExecutable = None
-if os.name == 'posix':
-    diffExecutable = 'diff' + commonDiffFlags
-elif os.name == 'nt':
+if os.name == 'nt' or os.environ.get('TRAVIS')=='true':
     pydiff = quotePath( os.path.join(config.test_source_root, 'pydiff.py') )
     diffExecutable = sys.executable + ' ' + pydiff + commonDiffFlags
+elif os.name == 'posix':
+    diffExecutable = 'diff' + commonDiffFlags
 else:
     lit_config.fatal('Unsupported platform')
 lit_config.note("Using diff tool '{}'".format(diffExecutable))
