Yices2 interface for Boogie.
Use with: /proverOpt:SOLVER=Yices2 /useArrayTheory

--- a/Source/Provers/SMTLib/SMTLib.csproj
+++ b/Source/Provers/SMTLib/SMTLib.csproj
@@ -176,6 +176,7 @@
     <Compile Include="TypeDeclCollector.cs" />
     <Compile Include="..\..\version.cs" />
     <Compile Include="Z3.cs" />
+    <Compile Include="Yices2.cs" />
     <Compile Include="CVC4.cs" />
   </ItemGroup>
   <ItemGroup>
