Fix diff tool setup
Since recently, lit has a built-in diff implementation that does not support all
command-line options (causing failed tests). Thus, on Posix systems we supply
the absolute path to the system diff, and on other systems we fall back on the
Python driver around difflib.

--- a/Test/lit.site.cfg
+++ b/Test/lit.site.cfg
@@ -104,7 +104,7 @@ if len(boogieParams) > 0:
     boogieExecutable = boogieExecutable + ' ' + boogieParams
 
 # Inform user what executable is being used
-lit_config.note('Using Boogie: {}\n'.format(boogieExecutable))
+lit_config.note('Using Boogie: {}'.format(boogieExecutable))
 
 config.substitutions.append( ('%boogie', boogieExecutable) )
 
@@ -127,16 +127,18 @@ else:
     lit_config.warning('Skipping solver sanity check on Windows')
 
 # Add diff tool substitution
-commonDiffFlags=' --unified=3 --strip-trailing-cr --ignore-all-space'
-diffExecutable = None
-if os.name == 'nt' or os.environ.get('TRAVIS')=='true':
-    pydiff = quotePath( os.path.join(config.test_source_root, 'pydiff.py') )
-    diffExecutable = sys.executable + ' ' + pydiff + commonDiffFlags
-elif os.name == 'posix':
-    diffExecutable = 'diff' + commonDiffFlags
+if os.name == 'posix':
+    # use the system diff
+    # Note: We need to get the absolute path because otherwise lit uses a
+    #       built-in diff that does not support all flags below.
+    diffExecutable = lit.util.which('diff')
 else:
-    lit_config.fatal('Unsupported platform')
-lit_config.note("Using diff tool '{}'".format(diffExecutable))
+    # use driver around Python's difflib
+    pydiff = quotePath( os.path.join(config.test_source_root, 'pydiff.py') )
+    diffExecutable = sys.executable + ' ' + pydiff
+
+diffExecutable += ' --unified=3 --strip-trailing-cr --ignore-all-space'
+lit_config.note("Using diff tool: {}".format(diffExecutable))
 
 config.substitutions.append( ('%diff', diffExecutable ))
 
