--- a/Source/Concurrency/Concurrency-NetCore.csproj
+++ b/Source/Concurrency/Concurrency-NetCore.csproj
@@ -5,6 +5,7 @@
     <AssemblyName>BoogieConcurrency</AssemblyName>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <DefineConstants>COREFX_SUBSET</DefineConstants>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,9 +21,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="**/*.cs" />
-    <Compile Remove="**/cce.cs" />
-    <Compile Remove="**/AssemblyInfo.cs" />
+    <Compile Include="..\version.cs">
+      <Link>version.cs</Link>
+    </Compile>
+    <Compile Include="**\*.cs" />
+    <Compile Remove="**\cce.cs" />
+    <Compile Remove="**\AssemblyInfo.cs" />
   </ItemGroup>
 
 </Project>
