Add Translation: introduce intermediate variables

--- a/Source/Concurrency/Concurrency.csproj
+++ b/Source/Concurrency/Concurrency.csproj
@@ -84,6 +84,7 @@
     <Compile Include="TransitionRelationComputation.cs" />
     <Compile Include="YieldTypeChecker.cs" />
     <Compile Include="CivlUtil.cs" />
+    <Compile Include="NewTransitionRelationComputation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
