Add Coco/R and modified frame files under new ThirdParty directory
Including Coco/R and the modified frame files makes it easier to (re)generate
Boogie's scanner and parser. Since Coco/R has a different license than Boogie,
a new ThirdParty directory and NOTICES.md file is added.

Resolves #132

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@ Binaries/*.pdb
 Binaries/*.config
 Binaries/*.vshost.exe.manifest
 
+# Coco/R
+Scanner.cs.old
+Parser.cs.old
+
 # Editor temporary files
 .*.swp
 
